# catering_bot

./: CMakeLists.txt  README.md  maps_downstairs_test_july1.pgm  maps_downstairs_test_july1.yaml  maps_downstairs_test_new.pgm  maps_downstairs_test_new.yaml  package.xml
arduino_sketch/: arduino_sketch.ino
config/: gz_bridge.yaml  joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  scan_filter.yaml  twist_mux.yaml  ydlidar.yaml
description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: central_compute.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  nav2.launch.py  rpi_robot.launch.py  rsp.launch.py  safety.launch.py  safety_node.py  slam.launch.py  stop_debug.launch.py  xbox_controller.launch.py  xbox_controller.py  ydlidar.launch.py
maps/: DownStairsTestMapJune03.pgm  DownStairsTestMapJune03.yaml  asb_atrium.pgm  asb_atrium.xcf  asb_atrium.yaml  asb_withtables.xcf  downstairs_test1.pgm  downstairs_test1.yaml  downstairs_test_july1.pgm  downstairs_test_july1.yaml  july15test.pgm  july15test.yaml  test_map1.pgm  test_map1.yaml  test_map2.pgm  test_map2.yaml
scripts/: heartbeat_node.py  install_robot_service.sh  safety_node.py  start_robot_stack.sh  stop_debug_monitor.py  xbox_controller.py
systemd/: my-bot-robot.service.in
worlds/: empty.world
